Final Florida COVID Data

--- a/Florida.ipynb
+++ b/Florida.ipynb
@@ -23990,10 +23990,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.savefig(\"Florida_Case_Count.png\")"
+   ]
   },
   {
    "cell_type": "code",
