--- a/Florida.ipynb
+++ b/Florida.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import Dependencies \n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -19,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up query string\n",
     "url = \"https://api.covidtracking.com/v1/states/fl/daily.json\"\n",
     "response = requests.get(url).json()"
    ]
@@ -22663,6 +22665,7 @@
     }
    ],
    "source": [
+    "#Call url to get data\n",
     "response"
    ]
   },
@@ -22672,6 +22675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Create lists to hold the data you want\n",
     "date = []\n",
     "positiveIncrease = []\n",
     "deathIncrease = []"
@@ -22683,6 +22687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use for loop to pull out the data\n",
     "for data in range (0,len(response)):\n",
     "    date.append(response[data]['date'])\n",
     "    positiveIncrease.append(response[data]['positiveIncrease'])\n",
@@ -22815,6 +22820,7 @@
     }
    ],
    "source": [
+    "#create data frame to hold pulled data\n",
     "florida_dict = {\n",
     "\n",
     "'Date': date,\n",
@@ -22953,6 +22959,7 @@
     }
    ],
    "source": [
+    "#Dropped any rows without a value\n",
     "florida_data = florida_data.dropna(how='any')\n",
     "florida_data"
    ]
@@ -22986,6 +22993,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Return columns as integers instead of strings so we can plot the data\n",
     "florida_data['Case Count'] = florida_data['Case Count'].astype(int)"
    ]
   },
@@ -22995,6 +23003,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Return columns as integers instead of strings so we can plot the data\n",
     "florida_data['Death Count'] = florida_data['Death Count'].astype(int)"
    ]
   },
@@ -23331,6 +23340,7 @@
     }
    ],
    "source": [
+    "#scale down the data to make the plot read better\n",
     "clean_df = florida_data [florida_data.index % 10 == 0] \n",
     "clean_df"
    ]
@@ -23745,6 +23755,7 @@
     }
    ],
    "source": [
+    "#formatted date&time\n",
     "clean_df['Date'] = clean_df['Date'].apply(lambda x: pd.to_datetime(str(x), format='%Y%m%d'))\n",
     "clean_df"
    ]
@@ -23768,6 +23779,7 @@
     }
    ],
    "source": [
+    "#generate a plot, label, adjust and save the image\n",
     "plt.figure(figsize=(15,9.80))\n",
     "Case_count = plt.plot(clean_df['Date'], clean_df.loc[:, 'Case Count'], color=\"blue\", label=\"Case Count\")\n",
     "plt.legend()\n",
@@ -23798,6 +23810,7 @@
     }
    ],
    "source": [
+    "#generate a plot, label, adjust and save the image\n",
     "plt.figure(figsize=(15,9.80))\n",
     "Death_count = plt.plot(clean_df['Date'], clean_df.loc[:, 'Death Count'], color=\"red\", label=\"Death Count\")\n",
     "plt.legend()\n",
